Resolved type error